<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fragment_demo2.MainActivity">

    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fragment1"
        android:background="@drawable/button_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fragment2"
        android:background="@drawable/button_border"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/fragment4"
        android:background="@drawable/button_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/fragment5"
        android:background="@drawable/button_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/fragment6"
        android:background="@drawable/button_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/fragment3"
        android:background="@drawable/button_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>